[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "appeal"
author = "Larry Hastings"
author-email = "larry@hastings.org"
home-page = "https://github.com/larryhastings/appeal/"
requires-python = ">=3.6"
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    ]
